# algorithms

./: CMakeLists.txt  README.md
src/: insertion_sort.cc  merge_sort.cc
